# mqtt-scale-garmin-bridge

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  docker-compose.yaml  pyproject.toml  requirements.txt
.gitea/workflows/: ci.yml  release.yml
.github/workflows/: ci.yml  release.yml
config/: config.yaml.example
docker/: Dockerfile  docker-compose.yaml
src/: __init__.py  backup.py  bridge_configurator.py  garmin_uploader_garth.py  garmin_uploader_original.py  main.py  measurement_filter.py  mqtt_subscriber.py  user_manager.py
src/body_metrics/: __init__.py  calculator.py  scales.py
tools/: import_tokens.py
